glx/testdata/invalid/invalid-entity-ids/persons/person_invalid_id.glx
persons:
  person_invalid_id:
    properties:
      name:
        value: "Test Person"
        fields:
          given: "Test"
          surname: "Person"
